# test1

./: CMakeLists.txt
python/: main.py
src/: Plugin1.cpp  Plugin2.cpp  binder.cpp  create_plugin.py  main.py  operation.hpp  setup.py
